Closes-Bug:#1610578 - Overlap of labels in the charts & Reduced space between Donut Charts

--- a/webroot/monitor/infrastructure/common/ui/css/monitor.infra.css
+++ b/webroot/monitor/infrastructure/common/ui/css/monitor.infra.css
@@ -30,7 +30,13 @@
     font-weight:600;
     font-size:11px !important;
 }
+#config-nodes-donutchart-section{
+    margin-top:40px;
+}
 #analytics-nodes-chart .chartMargin{
     margin:0 10px 0 10px !important;
 }
+#config-nodes-donutchart-one .nvd3-svg{
+    margin-left:20%;
+ }
 /******Config Node chart and Analytics node chart Ends here****/
